<resources>
    <string name="app_name" translatable="false">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="contact_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="share_url" translatable="false">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="user_agreement_url" translatable="false">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="no_search_output">Ничего не нашлось</string>
    <string name="search_connection_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_search_history">Очистить историю</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_library_is_empty">Ваша медиатека пуста</string>
    <string name="newp_playlist">Новый плейлист</string>
    <string name="you_did_not_create_playlists">Вы не создали ни одного плейлиста</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="new_playlist_et_name">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="track_already_added">Трек уже добавлен в плейлист %1$s</string>
    <string name="added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="want_to_delet_track">Хотите удалить трек?</string>
    <string name="all_unsaved_data_wil_be_deleted">Все несохраненные данные будут потеряны</string>
    <string name="finish">Завершить</string>
    <string name="cancel">Отмена</string>
    <plurals name="tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <plurals name="mins">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
    <string name="track_info">%1$d. %2$s - %3$s (%4$s)</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="share">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="wanna_delete_playlist">Хотите удалить плейлист «%1$s»?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="list_of_tracks_is_empty">Список треков пуст</string>
</resources>