<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".playlist.ui.newplaylist.NewPlaylistFragment">

    <Toolbar
        android:id="@+id/tbNewPlaylist"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:contentInsetStartWithNavigation="64dp"
        android:navigationIcon="@drawable/ic_arrow"
        android:title="@string/new_playlist"
        android:titleTextAppearance="@style/SettingsActivityToolbarTitleStyle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="26dp"
            android:background="@drawable/photo_picker_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivPhotoPicker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:background="@drawable/new_playlist_image_background"
                app:shapeAppearanceOverlay="@style/RoundedImageStyle"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivPhotoPickerIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/new_playlist_image_background"
                android:src="@drawable/ic_photo_picker"
                app:shapeAppearanceOverlay="@style/RoundedImageStyle"/>
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/etName"
        style="@style/NewPlaylistEditTextTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/et_background"
        android:hint="@string/new_playlist_et_name" />

    <EditText
        android:id="@+id/etDescription"
        style="@style/NewPlaylistEditTextTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/et_background"
        android:hint="@string/description" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="18dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/btn_selector"
            android:fontFamily="@font/ys_display_medium"
            android:paddingVertical="12dp"
            android:text="@string/create"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textFontWeight="500"
            android:textSize="@dimen/small_text_size" />
    </FrameLayout>

</LinearLayout>