<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/bBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/ic_arrow"
            android:layout_marginTop="18dp"
            android:layout_marginStart="@dimen/default_padding"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="14dp"
            android:text="Настройки"
            android:textSize="@dimen/big_text_size"
            android:textColor="@color/black"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/default_padding"
        android:layout_marginTop="24dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/small_text_size"
            android:layout_weight="1"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="15dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal"
        android:paddingStart="@dimen/default_padding">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/share_app"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/small_text_size"
            android:layout_weight="1"
            android:textColor="@color/black"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/margin_end"
            android:src="@drawable/ic_share" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal"
        android:paddingStart="@dimen/default_padding">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/contact_support"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/small_text_size"
            android:layout_weight="1"
            android:textColor="@color/black"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/margin_end"
            android:src="@drawable/ic_support" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal"
        android:paddingStart="@dimen/default_padding">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/user_agreement"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/small_text_size"
            android:layout_weight="1"
            android:textColor="@color/black"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/margin_end"
            android:src="@drawable/ic_arrow_forward" />

    </LinearLayout>

</LinearLayout>