<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/double_light_grey"
    android:orientation="vertical"
    tools:context=".playlist.ui.playlist_page.PlaylistPageFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_arrow" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivPlaylistImage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/RoundedImageStyle"
                tools:src="@drawable/ic_placeholder_album" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvPlaylistName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/ys_display_bold"
            android:textColor="@color/black"
            android:textFontWeight="700"
            android:textSize="24sp"
            tools:text="Best songs 2021" />

        <TextView
            android:id="@+id/tvPlaylistDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="@color/black"
            android:textFontWeight="400"
            android:textSize="18sp"
            tools:text="Best songs 2021" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPlaylistAllTracksDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/ys_display_regular"
                android:textColor="@color/black"
                android:textFontWeight="400"
                android:textSize="18sp"
                app:drawableEndCompat="@drawable/ic_dot_black"
                tools:text="300 минут" />

            <TextView
                android:id="@+id/tvTracksCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ys_display_regular"
                android:textColor="@color/black"
                android:textFontWeight="400"
                android:textSize="18sp"
                tools:text="98 треков" />

        </LinearLayout>

        <LinearLayout
            android:id="@id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16sp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_share_black" />

            <ImageView
                android:id="@+id/ivDots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:src="@drawable/ic_three_dots" />

        </LinearLayout>


    </LinearLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottomsheet_background"
        android:orientation="vertical"
        app:behavior_hideable="false"
        app:behavior_peekHeight="300dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="54dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/bottomsheet_rounded_opener"
            android:backgroundTint="@color/double_light_grey" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="14dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="18dp"
            tools:visibility="gone"/>

        <TextView
            android:id="@+id/tvEmptyList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_of_tracks_is_empty"
            android:gravity="center"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="16sp"
            android:textColor="?attr/colorPrimary"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomSheetMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottomsheet_background"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        tools:visibility="gone">

        <View
            android:layout_width="54dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/bottomsheet_rounded_opener"
            android:backgroundTint="@color/double_light_grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="8dp"
            android:paddingStart="14dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivPlaylistImageMenu"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/SmallRoundedImageStyle"
                tools:src="@drawable/ic_placeholder_album"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:paddingStart="8dp">

                <TextView
                    android:id="@+id/tvPlaylistNameInMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Best Songs 2021"
                    android:fontFamily="@font/ys_display_regular"
                    android:textSize="16sp"
                    android:textFontWeight="400"
                    android:textColor="?attr/colorPrimary"/>

                <TextView
                    android:id="@+id/tvTracksCountInMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="98 треков"
                    android:fontFamily="@font/ys_display_regular"
                    android:textSize="11sp"
                    android:textFontWeight="400"
                    android:textColor="@color/light_grey"/>

            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/tvSharePlaylist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/share"
            android:paddingStart="16dp"
            style="@style/PlaylistMenuTextButtonsStyle"
            android:paddingVertical="20dp"/>

        <TextView
            android:id="@+id/tvEditPlaylist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/edit_playlist"
            android:paddingStart="16dp"
            style="@style/PlaylistMenuTextButtonsStyle"
            android:paddingVertical="20dp"/>

        <TextView
            android:id="@+id/tvDeletePlaylist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/delete_playlist"
            android:paddingStart="16dp"
            style="@style/PlaylistMenuTextButtonsStyle"
            android:paddingVertical="20dp"/>


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>